Use Java 8, now that crash with certain types of protection is fixed.